--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Recommended"
+  "exclude": ["webpack.config.ts"]
 }
