wip: 테스트 환경설정 작업 중

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,12 +18,7 @@
     "sourceType": "module"
   },
   "plugins": [
-    "@typescript-eslint",
-    "react",
-    "react-hooks",
-    "jsx-a11y",
-    "import",
-    "prettier"
+    "@typescript-eslint"
   ],
   "rules": {}
 }
